fix: escape # char

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -56,7 +56,7 @@ donations made by all of you.
 
 In May this year, in addition to the many donations of our amazing supporters
 all over the world, we received a large amount of [funding from
-#startsmall](/blog/opensats-receives-additional-funding-of-dollar10m-from-startsmall),
+\#startsmall](/blog/opensats-receives-additional-funding-of-dollar10m-from-startsmall),
 which kicked our efforts into high gear. Thanks to this donation we were able to
 bootstrap our [long-term support
 program](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
@@ -131,13 +131,12 @@ in 2023 were made via Lightning.
 ![](/static/images/blog/2023-eoy/donations.png)
 
 As mentioned above, out of the hundreds of donations received this year, one
-stood out in particular: the [\$10M donation from
-#startsmall](/blog/opensats-receives-additional-funding-of-dollar10m-from-startsmall),
-which kickstarted [The Nostr Fund](/projects/nostr) with
-\$5M, filled up our [General Fund](/projects/general_fund)
-with \$4.7M, and provided funding for our [Operations
-Budget](/projects/opensats_operations_budget) with \$330k.
-The remaining donations in 2023 amounted to over 660 million sats or \$230,000 at
+stood out in particular: the \$10M donation from
+[\#startsmall](https://startsmall.llc/) which kickstarted [The Nostr
+Fund](/projects/nostr) with \$5M, filled up our [General
+Fund](/projects/general_fund) with \$4.7M, and provided funding for our
+[Operations Budget](/projects/opensats_operations_budget) with \$330k.  The
+remaining donations in 2023 amounted to over 660 million sats or \$230,000 at
 the time of donation. The vast majority of donations were made towards our
 General Fund.
 
