--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -3,7 +3,7 @@ title: "OpenSats' 2023 Year in Review"
 date: '2023-12-31'
 tags: ['OpenSats', 'grants', 'donations', 'bitcoin', 'nostr', 'review']
 draft: false
-authors: ['eiaine', 'dergigi']
+authors: ['dergigi', 'eiaine']
 images: ['/static/images/blog/20-eoy.jpg']
 summary: "TODO"
 ---
