feat: add donate to ops button at the end

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -389,6 +389,10 @@ Consequently, we have to fund our operations separately. If you like what we’r
 doing please consider donating to our [Operations
 Budget](/projects/opensats_operations_budget).
 
+<center>
+    <DonateToOperationsButton/>
+</center>
+
 We deeply appreciate all support and hope this “year in review” is helpful in
 understanding what we are building. We are incredibly grateful for our grantees
 and everyone working on bitcoin and freedom tech. Thank you for focusing your
