feat: add cover image & summary

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'donations', 'bitcoin', 'nostr', 'review']
 draft: false
 authors: ['dergigi', 'eiaine']
 images: ['/static/images/blog/20-eoy.jpg']
-summary: "TODO"
+summary: "365 days. Two funds. 90 grants. Billions of sats."
 ---
 
 The year is coming to an end, and what a year it's been! Amidst all the turmoil
