--- a/data/authors/eiaine.mdx
+++ b/data/authors/eiaine.mdx
@@ -5,6 +5,7 @@ avatar: /static/images/board/eiaine.jpg
 occupation: Columnist
 company: Bloomberg
 twitter: https://twitter.com/eiaine
+nostr: npub1xsrpws8gksp0h9yw4p7ppqy8tf0xxw6q4xc5pthfw3h7a73dasusvyxwrv
 github: https://github.com/eiaine
 board: true
 ---
