fix: e's github handle

--- a/data/authors/eiaine.mdx
+++ b/data/authors/eiaine.mdx
@@ -6,7 +6,7 @@ occupation: Columnist
 company: Bloomberg
 twitter: https://twitter.com/eiaine
 nostr: npub1xsrpws8gksp0h9yw4p7ppqy8tf0xxw6q4xc5pthfw3h7a73dasusvyxwrv
-github: https://github.com/eiaine
+github: https://github.com/elaineo
 board: true
 ---
 
