--- a/data/authors/dez.mdx
+++ b/data/authors/dez.mdx
@@ -13,6 +13,8 @@ Dez is a loving husband, father, and veteran and is passionate about freedom
 technology. He is currently a consultant and enjoys learning more about bitcoin
 whenever possible.
 
-He was one of the first volunteers to join OpenSats and has been helping our
+He was one of the first [volunteers] to join OpenSats and has been helping our
 initiative even during his service (when he wasn't stuck on a boat in the high
 seas).
+
+[volunteers]: /about#volunteers
