feat(about): add volunteer@opensats.org email

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -63,6 +63,9 @@ volunteers that are helping the initiative in a variety of ways.
 
 <Members subset='Volunteers'/>
 
+Want to help? Let us know who you are and how you think you could help by
+writing a short email to volunteer@opensats.org.
+
 ---
 
 # Supporters
