Update Dez's bio (#204)
* feat(dez): update bio

* feat(dez): link to volunteers

* feat(about): add volunteer@opensats.org email

--- a/data/authors/dez.mdx
+++ b/data/authors/dez.mdx
@@ -9,19 +9,12 @@ nostr: npub1lwwszsyje89zaww8g8rqyzzjzm25lkzeqv4qsfmhpgazke5xxx5q7p62z6
 volunteer: true
 ---
 
-Dez is probably on a boat somewhere, which is why he is unable to provide a
-meaningful bio at the moment. If he is not doing Navy stuff he is helping
-OpenSats with recruitment and other things.
+Dez is a loving husband, father, and veteran and is passionate about freedom
+technology. He is currently a consultant and enjoys learning more about bitcoin
+whenever possible.
 
-Please enjoy a paragraph of "lorem ipsum" until Dez returns from the high seas:
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id tempor
-ipsum, sed mollis lorem. Donec vel felis mi. Mauris et urna scelerisque, porta
-enim et, aliquet diam. Donec ac laoreet tellus, vel consectetur ex. Vestibulum
-at diam vel quam vulputate vulputate. Duis vehicula malesuada metus, a euismod
-mi feugiat id. Donec molestie urna eget mauris commodo convallis. Donec maximus
-tortor quis tortor ullamcorper, at aliquam dolor efficitur. Donec eget laoreet
-velit, et sollicitudin justo. Donec vitae maximus ex. Nulla a quam id neque
-elementum tempor quis sed mauris. Phasellus malesuada neque neque, vitae
-accumsan neque varius eu. Vivamus blandit nisl sed mi pulvinar consequat. Ut
-eget sagittis diam, id commodo arcu. Ut sit amet pretium mi, et posuere metus.
-Cras sit amet elementum augue, ut auctor ipsum.
+He was one of the first [volunteers] to join OpenSats and has been helping our
+initiative even during his service (when he wasn't stuck on a boat in the high
+seas).
+
+[volunteers]: /about#volunteers
