--- a/data/blog/tbd.mdx
+++ b/data/blog/tbd.mdx
@@ -8,57 +8,39 @@ images: ['/static/images/blog/21-bit.jpg']
 summary: "TODO"
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec convallis
-libero, non ultrices ante. Maecenas tellus neque, luctus ut vehicula at, rutrum
-nec nunc. Phasellus lacinia magna eu ipsum dapibus rhoncus. Pellentesque sed
-urna vel mi rhoncus vehicula. Suspendisse rhoncus sem sit amet magna feugiat,
-sed posuere tellus pulvinar. Cras vel fermentum turpis. Phasellus laoreet, erat
-in euismod vehicula, lectus ligula congue ipsum, ut fermentum erat libero quis
-nulla. Nullam et nulla id enim condimentum pretium nec sit amet sapien. Duis
-eleifend est ante, eu sodales tortor varius eu. Integer at ultrices nisl. Nunc
-aliquet finibus elit, eget pulvinar turpis ornare sed. Suspendisse mattis ligula
-sit amet nibh blandit fringilla. Donec sed nibh at purus tempor tempus.
-Suspendisse facilisis, risus a pretium condimentum, turpis dui porttitor nulla,
-ut laoreet lacus dui vehicula erat.
+OpenSats’ mission is to support and maintain a sustainable ecosystem of funding
+for free and open-source projects and contributors, especially bitcoin-related
+projects and projects that help bitcoin flourish. One of the most important
+words in our mission statement is _sustainable_, which is why we are delighted to
+report that Bitwise has committed to donating a considerable part of their
+Bitcoin ETF's profits to OpenSats for the next 10 years.
 
-Integer lacus lorem, facilisis id feugiat id, rhoncus rutrum arcu. Suspendisse
-tristique posuere cursus. Quisque leo velit, congue vitae lectus semper,
-facilisis placerat ante. Integer vulputate, metus a accumsan blandit, mauris sem
-venenatis lorem, eget suscipit velit risus et diam. Mauris viverra turpis
-mauris, eu vulputate tellus elementum quis. Maecenas nunc nulla, volutpat vel
-gravida eu, sodales id diam. Ut hendrerit dolor ut aliquam ornare. Fusce eget
-ipsum porta, mattis nulla vitae, ultricies nibh. Donec nulla est, blandit eget
-orci nec, mollis congue risus. Pellentesque habitant morbi tristique senectus et
-netus et malesuada fames ac turpis egestas. Cras sodales neque enim, ut volutpat
-orci iaculis in. Cras elementum tellus nec dictum mollis. Etiam lacinia dolor et
-dui consequat, sit amet interdum leo malesuada. Donec tincidunt augue ut sem
-dignissim venenatis. Praesent cursus felis nisi, non pretium velit tempor in.
+As announced today, Bitwise will donate 10% of Bitwise Bitcoin ETF (ticker:
+BITB) profits to bitcoin open-source development. OpenSats is one of the
+recipients of this generous donation, along with Brink and the Human Rights
+Foundation’s Bitcoin Development Fund.
 
-Praesent lacinia dapibus cursus. Phasellus quis est est. Quisque nec diam at
-orci lacinia dictum. In hac habitasse platea dictumst. Mauris in arcu pulvinar
-lacus tempus maximus. Pellentesque a mauris id est vestibulum efficitur egestas
-non nisi. Vestibulum fermentum volutpat risus, vel vestibulum metus ornare id.
-In pretium purus in tristique convallis. Maecenas ultrices sit amet enim et
-aliquet. Ut scelerisque erat in ipsum dignissim bibendum. Vestibulum mauris
-velit, mattis a viverra non, pulvinar quis ex. Sed sagittis velit id orci
-tempus, ultrices facilisis purus pharetra. Integer maximus quam nec dui
-convallis bibendum. Vivamus congue ornare est vel pellentesque. Vivamus ut nunc
-ac ex sodales viverra id quis tortor. Curabitur sit amet velit volutpat,
-accumsan turpis sed, faucibus lectus.
+> Freedom tech is hope. Every Bitcoin ETF should follow the lead of Bitwise and
+> donate a portion of their profits to open source developers who make this
+> movement possible.
+>
+><cite>Matt Odell</cite>
 
-Duis porttitor nisi id ultricies efficitur. Cras eleifend elementum sem at
-sagittis. Mauris ultricies erat non tincidunt tincidunt. Etiam blandit purus
-erat, eu vehicula justo ultrices eu. Donec vestibulum tellus eu interdum
-laoreet. Praesent in malesuada massa. Donec volutpat dolor massa, sodales
-placerat nunc placerat venenatis.
+We hope that, eventually, every Bitcoin ETF will follow the example of Bitwise,
+giving back to the open-source community that tirelessly works on improving the
+[infrastructure] we all depend upon.
 
-Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-turpis egestas. Nunc ultrices eget massa ac ultrices. Mauris ut neque rhoncus,
-condimentum ex et, gravida arcu. Suspendisse pellentesque mattis ipsum, nec
-condimentum tortor mollis ut. Pellentesque commodo iaculis diam in mollis.
-Curabitur vel nisi nunc. In a condimentum tortor. Etiam sed sem tincidunt,
-placerat odio sit amet, posuere ex. Pellentesque eu molestie justo, id congue
-lorem. Aenean arcu massa, eleifend quis facilisis sed, iaculis at nisl.
-Vestibulum turpis libero, faucibus hendrerit commodo vitae, malesuada et tellus.
-Proin non erat eget ex tristique molestie. Nam vestibulum mollis felis quis
-interdum. Vivamus bibendum mollis mollis.
+Open-source software in general, and bitcoin in particular, is a positive-sum
+game. We all benefit from the adoption of software that is open and free as in
+freedom. With the growth in bitcoin adoption and appreciation, it will become
+increasingly obvious that using a sound, global, borderless, and programmable
+monetary protocol with an incorruptible monetary policy is beneficial for
+everyone who chooses to opt in.
+
+We applaud Bitwise for setting an example amongst Bitcoin ETF issuers and
+encourage all other fund issuers to give back to the open-source ecosystem in a
+similar way. If you are interested in supporting our mission please reach out to
+us or [donate to OpenSats][donate] directly.
+
+[infrastructure]: /blog/bitcoin-infrastructure-this-decade
+[donate]: /donate
