Update title & summary

--- a/data/blog/tbd.mdx
+++ b/data/blog/tbd.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Blogpost Title"
+title: "OpenSats to Receive Recurring Donations from Bitwise Bitcoin ETF Profits"
 date: '2024-01-10'
 tags: ['OpenSats', 'funding', 'bitcoin']
 draft: false
 authors: ['dergigi']
 images: ['/static/images/blog/21-bit.jpg']
-summary: "TODO"
+summary: "Bitwise will donate 10% of Bitwise Bitcoin ETF (ticker: BITB) profits to bitcoin open-source development."
 ---
 
 OpenSats’ mission is to support and maintain a sustainable ecosystem of funding
