--- a/data/blog/recurring-donations-from-bitwise-bitcoin-etf-bitb.mdx
+++ b/data/blog/recurring-donations-from-bitwise-bitcoin-etf-bitb.mdx
@@ -3,7 +3,7 @@ title: "OpenSats to Receive Recurring Donations from Bitwise Bitcoin ETF Profits
 date: '2024-01-10'
 tags: ['OpenSats', 'funding', 'bitcoin']
 draft: false
-authors: ['dergigi']
+authors: ['dergigi', 'odell']
 images: ['/static/images/blog/21-bitb.jpg']
 summary: "Bitwise will donate 10% of Bitwise Bitcoin ETF (ticker: BITB) profits to bitcoin open-source development."
 ---
