Link to /selection

--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -243,7 +243,7 @@ fantastic signal and something we are delighted about. Some applications are
 still being reviewed by the OpenSats board, as we try our best to assess
 feasibility, alignment, and potential impact of each project. We will announce
 additional grants as applications pass our [grant selection
-process](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md).
+process](/selection).
 
 Unfortunately, we were unable to fund all of the proposals that were sent to us.
 Please don't hesitate to apply again in case your application was rejected this
