--- a/data/pages/apply.mdx
+++ b/data/pages/apply.mdx
@@ -46,7 +46,6 @@ and redistribution free of charge and without restrictions.
 share their experience and expertise with the greater community. We prefer
 developers who actively engage in mentorship, and help introduce Bitcoin
 software development to newcomers.
-
 If your application is approved, we will reach out with any additional
 information necessary to ensure you are able to receive donation payouts. This
 may include tax related information depending on your location and/or bitcoin
@@ -55,4 +54,4 @@ addresses in order to receive donation payouts from OpenSats.
 [gf]: /projects/general_fund
 [mission]: /mission
 [about]: /about
-[gsp]: https://github.com/OpenSats/website/tree/master/docs/grant-selection.md
+[gsp]: /selection
