Add link to grant selection process

--- a/data/pages/apply.mdx
+++ b/data/pages/apply.mdx
@@ -26,7 +26,7 @@ All applications should be made with the following criteria in mind:
 - Free and Open-Source
 - Transparency & Education
 
-Our [Grant Selection Process][gsp] involves the evaluation of multiple criteria,
+Our [grant selection process][gsp] involves the evaluation of multiple criteria,
 but these three are crucial for any successful application.
 
 **Bitcoin:** We prioritize projects that will have a direct impact on the utility or
