--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -83,8 +83,7 @@ align with the mission of our charity to be eligible for donations.
 ## How do I become listed on the site?
 
 Any project that is free and open-source and is aligned with the OpenSats
-mission are free to [submit an application](/apply) for their
-project to be listed on the [OpenSats website](/projects).
+mission is free to [submit an application](/apply).
 
 All applications which fulfill the criteria will be evaluated by the Board. Upon
 board approval and collection of necessary supplemental data, approved projects
@@ -92,8 +91,8 @@ will be listed on the OpenSats project portal. Donors will be able to contribute
 funds and recommend that the OpenSats' board considers their donations be
 allocated towards these pre-approved, mission-aligned projects.
 
-If you are helping Bitcoin and FOSS, please [submit an
-application](/apply) to be listed on our site.
+If you are helping Bitcoin and FOSS, please [submit an application](/apply) on
+our website.
 
 ## How did you choose the board?
 
