Use showcase email instead of form (#211)
* Use showcase@opensats.org instead of form

* Remove /apply/to-be-listed

* Link to /selection

* Add link to grant selection process

* Remove link to /to-be-listed

* Reword FAQ

* Delete WebsiteApplicationForm.tsx

* Fix imports

--- a/data/pages/submitted.mdx
+++ b/data/pages/submitted.mdx
@@ -20,5 +20,5 @@ Thank you for helping us fulfil [our mission][mission], which is to support
 builders like you.
 
 [mail]: mailto:applications@opensats.org
-[review]: https://github.com/OpenSats/website/tree/master/docs/grant-selection.md
+[review]: /selection
 [mission]: /mission
