Remove "Project Listing" Wording

--- a/data/pages/selection.mdx
+++ b/data/pages/selection.mdx
@@ -48,7 +48,7 @@ ensure the grant achieves the intended outcomes.
 ## Our Process for Reviewing Grant Proposals
 
 We are committed to a thorough and rigorous process for reviewing grant
-applications and project listings. We aim to ensure that proposals align with
+applications. We aim to ensure that proposals align with
 our mission and priorities, are well-crafted, and have a clear path toward
 achieving intended outcomes.
 
