--- a/data/blog/rene-pickhardt-receives-lts-grant.mdx
+++ b/data/blog/rene-pickhardt-receives-lts-grant.mdx
@@ -9,9 +9,10 @@ summary: "OpenSats Welcomes René Pickhardt as an LTS Grantee."
 ---
 
 
-We are very excited to award a Long-term Support Grant to René Pickhardt,
-helping him continue his fundamental research on improving Bitcoin’s overall
-usefulness as a payment system through the Lightning Network.
+We are very excited to award a Long-term Support Grant to [René
+Pickhardt](https://ln.rene-pickhardt.de/), helping him continue his fundamental
+research on improving Bitcoin’s overall usefulness as a payment system through
+the Lightning Network.
 
 Fueled by gratitude for his scholarship from the [German National Academic
 Foundation](https://en.wikipedia.org/wiki/Studienstiftung), and the everyday
