Reword & add links to BitMEX

--- a/data/blog/rene-pickhardt-receives-lts-grant.mdx
+++ b/data/blog/rene-pickhardt-receives-lts-grant.mdx
@@ -15,9 +15,12 @@ research on improving Bitcoin’s overall usefulness as a payment system through
 the Lightning Network.
 
 Fueled by gratitude for his scholarship from the [German National Academic
-Foundation](https://en.wikipedia.org/wiki/Studienstiftung), and the everyday
-benefits of open-source software he uses, René has centered his career on giving
-back to the communities that supported him on his path.
+Foundation](https://en.wikipedia.org/wiki/Studienstiftung), his four consecutive
+[Bitcoin Developer
+Grants](https://blog.bitmex.com/renewal-of-rene-pickhardts-bitcoin-developer-grant-3/)
+from BitMEX, and the everyday benefits of the open-source software he uses, René
+has centered his career on giving back to the communities that supported him on
+his path.
 
 He has consistently shared commercially significant knowledge for a long time
 without seeking prior funding. All major LN implementations have integrated some
