--- a/data/blog/rene-pickhardt-receives-lts-grant.mdx
+++ b/data/blog/rene-pickhardt-receives-lts-grant.mdx
@@ -29,7 +29,7 @@ optimal for bitcoin payments.
 
 Over the years, he has achieved an almost endless list of invaluable
 contributions, including creating [Pickhardt
-Payments](https://github.com/renepickhardt/pickhardtpayments), renepay, actively
+Payments](https://github.com/renepickhardt/pickhardtpayments), actively
 answering most questions about the LN on [Stack
 Exchange](https://bitcoin.stackexchange.com/users/81940/rene-pickhardt),
 co-authoring the openly licensed book "[Mastering the Lightning
