Link to StackOverflow question

--- a/data/blog/rene-pickhardt-receives-lts-grant.mdx
+++ b/data/blog/rene-pickhardt-receives-lts-grant.mdx
@@ -43,12 +43,14 @@ have to blackmail us for this glowing review!)
 
 This LTS grant is now instrumental in René's ongoing efforts to enhance reliable
 payment planning, efficient payment routing, and explore innovative liquidity
-management strategies on the Lightning Network. He’s currently focused on
-researching non-minimum cost flow-based methods to optimize the expected
-delivery of sats and is [inviting feedback][if] on his outlining of the unique
-properties of redundant overpayments.
+management strategies on the Lightning Network. 
+He is currently focused on researching [non-minimum cost flow-based
+methods][methods] to optimize the expected delivery of sats and is inviting
+feedback on [this question][question] about how to compute the expected number
+of sats to arrive in a probabilistic payment flow.
 
-[if]: https://github.com/renepickhardt/Maximum-Expected-Value-Flows-For-Redundant-Overpayments
+[methods]: https://github.com/renepickhardt/Maximum-Expected-Value-Flows-For-Redundant-Overpayments
+[question]: https://bitcoin.stackexchange.com/questions/117447/how-to-compute-the-expected-number-of-sats-to-arrive-in-a-probabilistic-payment
 
 What’s more, he’s planning to host free online webinars. These sessions aim to
 bridge the gap between theoretical research and practical application by making
