--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -251,7 +251,7 @@ To all the nostr projects that applied and didn't make the cut this time around:
 don't be discouraged. Please [apply for funding][apply] again in the future. We
 will announce new grants and funding opportunities periodically, and there is
 always the possibility of being listed on the OpenSats website to receive
-pass-through donations for your project.  
+additional donations for your project.  
 
 We are excited to support the projects above in building the tools we bitcoiners
 care so deeply about. The future is bright; we just have a lot of building to
