--- a/data/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors.mdx
+++ b/data/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors.mdx
@@ -16,7 +16,7 @@ on critical infrastructure for the bitcoin network.
 The LTS program is a new initiative from OpenSats and is distinct from our
 regular grant program, which is more expansive in scope. It is also distinct
 from OpenSats' website listings, which allows reviewed open-source projects to
-receive tax-deductible donations via OpenSats. The LTS program is specifically
+directly receive additional donations. The LTS program is specifically
 designed to provide long-term support for developers who are working on critical
 open-source infrastructure in and around bitcoin.
 
