--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -71,7 +71,7 @@ You can also write to us at:
 
 ## How often are funding opportunities announced?
 
-Funding opportunities are announced once per year, depending on funding
+Funding opportunities are announced as they arise, depending on funding
 availability. Projects that align with our mission statement are encouraged to
 apply. Board members evaluate each application based on technical merit,
 potential impact, and the team's ability to execute.
