--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -110,8 +110,8 @@ do our best to ensure that all funds go to deserving projects which support
 OpenSats' mission of creating a sustainable and consistent ecosystem of
 funding for Bitcoin and Bitcoin-related FOSS contributors.
 
-We are committed to being 100% passthrough for all donations made on our
-platform. To this day our operational, legal, and payment processing fees have
+We are committed to being 100% passthrough for all donations made to our
+funds. To this day our operational, legal, and payment processing fees have
 been graciously and privately funded.
 
 Please consider donating to the [OpenSats Operations
