--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -13,7 +13,7 @@ education and research initiatives.**
 
 We want to see contributors to Bitcoin Core and FOSS (free and open-source)
 tools supported by a sustainable ecosystem and consistent funding, so we set up
-a platform to do just that. Donors can come to the OpenSats web platform and
+an initiative to do just that. Donors can come to the OpenSats website and
 either recommend gifts to specific project areas or contribute to our general
 fund.
 
