--- a/data/pages/support.mdx
+++ b/data/pages/support.mdx
@@ -18,8 +18,8 @@ cover the transaction fees that are incurred with each donation, regardless of
 payment method. Please [reach out](mailto:support@opensats.org) if you want to
 help us cover these costs.
 
-We are committed to being 100% passthrough for all donations made on our
-platform. To this day, our operational, legal, and payment processing fees have
+We are committed to being 100% passthrough for all donations made to our
+funds. To this day, our operational, legal, and payment processing fees have
 been graciously and privately funded by our [generous donors](https://os-website-git-team-open-sats.vercel.app/support#supporters).
 
 Please consider donating to our [Operations
