--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -15,8 +15,8 @@ education and research initiatives.
 
 We want to see contributors to Bitcoin and FOSS (free and open-source) tools
 supported by a sustainable ecosystem and consistent funding, so we set up a
-platform to do just that. Donors can come to the OpenSats web platform and
-either recommend gifts to [specific projects](/projects) or contribute to our
+platform to do just that. Donors can come to the OpenSats website and
+either recommend gifts to specific project areas or contribute to our
 [general fund][gf].
 
 Grants are distributed periodically by our board. We evaluate and assess
